<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_playlist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.com.example.android.audiobooks.PlaylistActivity"
    android:orientation="vertical"
    android:background="#FFCDD2">
    <TextView
        style="@style/description"
        android:text="@string/description_playlist"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <CheckBox
                style="@style/CheckBox"
                android:text="@string/list_item1"/>
            <CheckBox
                style="@style/CheckBox"
                android:text="@string/list_item2"/>
            <CheckBox
                style="@style/CheckBox"
                android:text="@string/list_item3"/>
            <CheckBox
                style="@style/CheckBox"
                android:text="@string/list_item4"/>
        </LinearLayout>
    </ScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_delete_from_list"
        android:textColor="#424242"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_add_from_library"
        android:id="@+id/add_from_library"
        android:textColor="#424242"/>
</LinearLayout>
