<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.com.example.android.audiobooks.MainActivity"
    android:orientation="vertical"
    android:background="#FFCDD2">
    <TextView
        style="@style/description"
        android:text="@string/description_main"/>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:text="@string/text_book1"
            android:id="@+id/book1"
            style="@style/BookMain"/>
        <Button
            android:text="@string/text_book2"
            style="@style/BookMain"
            android:id="@+id/book2"/>
        <Button
            android:text="@string/text_book3"
            style="@style/BookMain"
            android:id="@+id/book3"/>
    </LinearLayout>
</ScrollView>
    <Button
        android:text="@string/button_import"
        style="@style/Button"/>
</LinearLayout>

